# easyfile

./: .coveragerc  .gitignore  .pre-commit-config.yaml  build_and_push.sh  setup.cfg  setup.py
requirements/: common.txt  dev.txt
scripts/: coverage.sh  install.sh  run.sh
src/easy_file/: utils.py
src/easy_file/cast/: cast.py  utils.py
src/easy_file/cast/constant/: cboolean.py  cdate.py  cfloat.py  cglobal.py  cinteger.py  cstring.py
src/easy_file/cast/patterns/: c_patterns.py
src/easy_file/column/: column.py
src/easy_file/field/: field.py
src/easy_file/file/: __init__.py  csv_file.py  file.py  file_service.py
src/easy_file/sql/: column.py  connector.py  table.py
tests/cast/: test_cast.py  test_utils.py
tests/cast/constant/: test_cboolean.py  test_cdate.py  test_cfloat.py  test_cglobal.py  test_cinteger.py  test_cstring.py
tests/column/: test_column.py
tests/field/: test_field.py
tests/file/: test_csv_file.py  test_file.py  test_file_service.py
tests/file/data/: test_csv_with_header.csv  test_csv_with_header_light.csv  test_csv_without_header.csv  test_csv_without_header_fake_first_line.csv
tests/sql/: test_column.py  test_connector.py  test_table.py
