[coverage:report]
fail_under = 55

[coverage:run]
branch = True
source = src

[flake8]
ignore =
    # whitespace before ':'
    E203,
    # line break before binary operator
    W503
max-line-length = 88

[metadata]
author = sde
author_email = seb.delarue@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = data_dictionary
long_description = file: README.md
name = data_dictionary
url = https://github.com/seb90057/easyfile

[mypy]
ignore_missing_imports = True
no_warn_no_return = True
show_column_numbers = True
show_error_codes = True
strict_equality = True